cs16-surf-1/base/server/deployment.yaml

kind: Deployment
apiVersion: apps/v1
metadata:
  name: cs16-surf-1-deployment
  namespace: cs16-surf-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cs16-surf-1
  template:
    metadata:
      name: cs16-surf-1
      namespace: cs16-surf-1
      labels:
        app: cs16-surf-1
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - name: cs16-surf-1-container
        ports:
        - name: udp-27019
          containerPort: 27019
          protocol: UDP
        image: placeholder
        command: ["/bin/bash", "-c"]
        args:
        - "/home/steam/steamcmd/cs16/entrypoint.sh"
        resources:
          limits:
            cpu: "4"
            memory: 12Gi
          requests:
            cpu: 10m
            memory: 64Mi
      - name: nginx
        image: nginx:alpine
        ports:
        - name: http-80
          containerPort: 80
        volumeMounts:
        - name: shared-maps
          mountPath: /usr/share/nginx/html
      volumes:
      - name: shared-maps
        emptyDir: {}
