cs16-surf-1/base/server/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: cs16-surf-1
  namespace: cs16-surf-1
  labels:
    app: cs16-surf-1
spec:
  type: ClusterIP
  selector:
    app: cs16-surf-1
  ports:
  - name: udp-27019
    port: 27019
    targetPort: 27019
    protocol: UDP
